@@ -20,11 +20,13 @@
     <string-array name="deploytype_values" translatable="false">
         <item>file</item>
         <item>partition</item>
+        <item>ram</item>
         <item>custom</item>
     </string-array>
     <string-array name="deploytype_entries">
         <item>File</item>
         <item>Partition</item>
+        <item>RAM</item>
         <item>Custom</item>
     </string-array>
     <string-array name="fstype_values" translatable="false">
